--- a/Computational Thinking/OpenMP/Vtune/Lab/r000hs/config/state.cfg
+++ b/Computational Thinking/OpenMP/Vtune/Lab/r000hs/config/state.cfg
@@ -1,167 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <root>
  <client>
-  <doi>
-   <doiQuery>
-    <id type="string">CPUTime</id>
-    <displayName type="string">%CPUTime</displayName>
-    <cliName type="string"></cliName>
-    <description/>
-    <issueText/>
-    <valueType/>
-    <displayAttributes>
-     <sortType/>
-     <selfFormat/>
-     <totalFormat/>
-     <timelineFormat/>
-     <timelineGraphColor/>
-    </displayAttributes>
-    <instanceDbTable/>
-    <instanceBandTable/>
-   </doiQuery>
-  </doi>
+  <doi type="bag"/>
  </client>
- <bottomUpPane>
-  <state>
-   <currentGranularity type="string">Function:Call Stack</currentGranularity>
-   <model_state>
-    <sortOrderAscending type="bool">false</sortOrderAscending>
-    <column>
-     <visible type="bool">true</visible>
-     <expanded type="bool">false</expanded>
-     <width type="u32_t">130</width>
-     <format type="string">string</format>
-     <id>
-      <query type="string">CPUFunction</query>
-      <flag type="s32_t">1</flag>
-     </id>
-    </column>
-    <column>
-     <visible type="bool">true</visible>
-     <expanded type="bool">false</expanded>
-     <width type="u32_t">287</width>
-     <format type="string">timeAndBar</format>
-     <id>
-      <query type="string">CPUTime</query>
-      <flag type="s32_t">20</flag>
-     </id>
-     <column>
-      <visible type="bool">true</visible>
-      <expanded type="bool">false</expanded>
-      <width type="u32_t">100</width>
-      <format type="string">timeAndBar</format>
-      <id>
-       <query type="string">CPUUsageUtilization[%Idle]</query>
-       <flag type="s32_t">20</flag>
-      </id>
-     </column>
-     <column>
-      <visible type="bool">true</visible>
-      <expanded type="bool">false</expanded>
-      <width type="u32_t">100</width>
-      <format type="string">timeAndBar</format>
-      <id>
-       <query type="string">CPUUsageUtilization[%Poor]</query>
-       <flag type="s32_t">20</flag>
-      </id>
-     </column>
-     <column>
-      <visible type="bool">true</visible>
-      <expanded type="bool">false</expanded>
-      <width type="u32_t">100</width>
-      <format type="string">timeAndBar</format>
-      <id>
-       <query type="string">CPUUsageUtilization[%Ok]</query>
-       <flag type="s32_t">20</flag>
-      </id>
-     </column>
-     <column>
-      <visible type="bool">true</visible>
-      <expanded type="bool">false</expanded>
-      <width type="u32_t">100</width>
-      <format type="string">timeAndBar</format>
-      <id>
-       <query type="string">CPUUsageUtilization[%Ideal]</query>
-       <flag type="s32_t">20</flag>
-      </id>
-     </column>
-     <column>
-      <visible type="bool">true</visible>
-      <expanded type="bool">false</expanded>
-      <width type="u32_t">100</width>
-      <format type="string">timeAndBar</format>
-      <id>
-       <query type="string">CPUUsageUtilization[%Over]</query>
-       <flag type="s32_t">20</flag>
-      </id>
-     </column>
-    </column>
-    <column>
-     <visible type="bool">true</visible>
-     <expanded type="bool">false</expanded>
-     <width type="u32_t">40</width>
-     <format type="string">time</format>
-     <id>
-      <query type="string">CPUOverheadTime</query>
-      <flag type="s32_t">20</flag>
-     </id>
-    </column>
-    <column>
-     <visible type="bool">true</visible>
-     <expanded type="bool">false</expanded>
-     <width type="u32_t">40</width>
-     <format type="string">time</format>
-     <id>
-      <query type="string">CPUSpinTime</query>
-      <flag type="s32_t">20</flag>
-     </id>
-    </column>
-    <column>
-     <visible type="bool">true</visible>
-     <expanded type="bool">false</expanded>
-     <width type="u32_t">195</width>
-     <format type="string">string</format>
-     <id>
-      <query type="string">CPUFunctionModule</query>
-      <flag type="s32_t">2</flag>
-     </id>
-    </column>
-    <column>
-     <visible type="bool">true</visible>
-     <expanded type="bool">false</expanded>
-     <width type="u32_t">108</width>
-     <format type="string">string</format>
-     <id>
-      <query type="string">CPUFunctionFull</query>
-      <flag type="s32_t">2</flag>
-     </id>
-    </column>
-    <column>
-     <visible type="bool">true</visible>
-     <expanded type="bool">false</expanded>
-     <width type="u32_t">156</width>
-     <format type="string">string</format>
-     <id>
-      <query type="string">CPUFunctionSourceFile</query>
-      <flag type="s32_t">2</flag>
-     </id>
-    </column>
-    <sortedColumn>
-     <query type="string">CPUTime</query>
-     <flag type="s32_t">20</flag>
-    </sortedColumn>
-   </model_state>
-   <sortedState>
-    <sortedColumn type="string"></sortedColumn>
-    <forward type="bool">false</forward>
-   </sortedState>
-  </state>
- </bottomUpPane>
- <quickFilterPane>
-  <global type="bag"/>
- </quickFilterPane>
- <flatProfilePane type="bag"/>
- <callersPane type="bag"/>
- <calleesPane type="bag"/>
- <topDownPane type="bag"/>
 </root>
